src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

#root {
  width: 100vw;
  overflow: hidden;
}

.App {
  overflow-y: scroll;
  width: 100%;
}

* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth !important;
}

@import url("https://fonts.googleapis.com/css2?family=Sofia+Sans&display=swap");

.homeText {
  font-family: "Sofia Sans", sans-serif;
}

.homeImage {
  width: 100%;
  height: 100vh;
  background-image: url("assets/bg.png");
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: 40rem 40rem;
  background-position: 25% bottom;
}

@media screen and (max-width: 575px) {
  .homeImage {
    background: none;
    height: 100%;
  }

  #main {
    height: 100vh;
  }
}

.mobileImgContainer {
  position: relative;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: flex-end;
}

.mobileImage {
  width: 25rem;
  height: auto;
  position: relative;
  left: -50%;
}

.nextPage {
  z-index: 30;
}

